// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`emission snapshots > assert-guard.ts deposit 1`] = `
"module Deposit.

Account.
balance a: Account => Int.
~> Deposit @ account: Account, amount: Int, amount > 0, balance account >= 0.

---

balance' account = balance account + amount.

check

balance' account > balance account.
"
`;

exports[`emission snapshots > deposit.ts deposit 1`] = `
"module Deposit.

Account.
balance a: Account => Int.
~> Deposit @ account: Account, amount: Int, ~(amount <= 0).

---

balance' account = balance account + amount.

check

balance' account > balance account.
"
`;

exports[`emission snapshots > max.ts larger (skeleton only) 1`] = `
"module Larger.

larger a: Int, b: Int => Int.

---

true.

check

all a: Int, b: Int | larger a b >= a and larger a b >= b.
"
`;

exports[`emission snapshots > max.ts larger 1`] = `
"module Larger.

larger a: Int, b: Int => Int.

---

all a: Int, b: Int | larger a b = cond a >= b => a, true => b.

check

all a: Int, b: Int | larger a b >= a and larger a b >= b.
"
`;

exports[`emission snapshots > validate-helper.ts deposit 1`] = `
"module Deposit.

Account.
balance a: Account => Int.
~> Deposit @ account: Account, amount: Int, ~(amount <= 0), ~(balance account < 0).

---

balance' account = balance account + amount.

check

balance' account >= 0.
"
`;
